--- a/workflow-templates/P2test93-ci.yml
+++ b/workflow-templates/P2test93-ci.yml
@@ -2,9 +2,9 @@ name: P2test93 CI
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ main ]
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -15,3 +15,4 @@ jobs:
 
       - name: Run a one-line script
         run: echo Hello from P2Test93 Organization
+
