--- a/workflow-templates/P2test93-ci.yml
+++ b/workflow-templates/P2test93-ci.yml
@@ -2,9 +2,11 @@ name: P2test93 CI
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches: 
+      - main
   pull_request:
-    branches: [ $default-branch ]
+    branches: 
+      - main
 
 jobs:
   build:
@@ -12,8 +14,5 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
       - name: Run a one-line script
         run: echo Hello from P2Test93 Organization
-
-
